cookies-consent: Avoid cookie consent box flicker

--- a/grantnav/frontend/static/css/main.css
+++ b/grantnav/frontend/static/css/main.css
@@ -903,6 +903,7 @@ a {
   background-color: transparent !important; }
 
 .cookie-consent {
+  display: none;
   padding-top: 0 !important;
   width: 450px;
   height: 325px;
